additional links added

--- a/data/linktree.yaml
+++ b/data/linktree.yaml
@@ -3,28 +3,28 @@ Newsletter:
     link: /newsletter/
 Discord:
     text: Join our Discord Server
-    link:
+    link: https://discord.gg/qhMcWM8
 Blog:
     text: Read Articles from our Blog
     link: /blog/
 Twitter:
     text: Follow us on Twitter
-    link:
+    link: https://twitter.com/diesmo5
 Instagram:
     text: Follow us on Instagram
-    link:
+    link: https://www.instagram.com/diesmo5/
 LinkedIn:
     text: Connect with us on LinkedIn
-    link:
+    link: https://www.linkedin.com/company/diesmo5/
 Facebook:
     text: Follow us on Facebook
-    link:
+    link: https://www.facebook.com/diesmo5/
 YouTube:
     text: Subscribe to our YouTube Channel
-    link:
+    link: https://www.youtube.com/channel/UCervm-DT4iirJRDVqziD4UQ?view_as=subscriber
 Podcast:
     text: Listen to Our Podcast
-    link:
+    link: /podcast/
 Store:
     text: Visit our Store Page
     link: /products-services/
