--- a/data/nav/store.yaml
+++ b/data/nav/store.yaml
@@ -3,6 +3,6 @@ Products:
     navUrl: products
     imgOFF: /img/store/products/business-cards-1280X960.jpg 
 Services:
-    navTitle: Services
+    navTitle: Client Services
     navUrl: services
     imgOFF: https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80
