--- a/data/home/cards2.yaml
+++ b/data/home/cards2.yaml
@@ -8,7 +8,7 @@ C:
   title: C How to Program
   description: Learn the C programming language. A good place to start for students.
   img: /img/home/cards/c-programming.jpg
-  url:
+  url: /c-programming
   tagline: Learn more
 Upcoming Events:
   title: Attend Our Upcoming Events
@@ -21,4 +21,4 @@ Code Org:
   description: Join our class so we can keep up with you as you learn, answer questions you might have, and help you progress from one course to the next.
   img: /img/home/cards/codeorg.jpg
   url:
-  tagline: See Event List
+  tagline: Coming Soon...
