--- a/data/nav/media.yaml
+++ b/data/nav/media.yaml
@@ -24,7 +24,7 @@ Podcast:
     mediaColor: amber
 Youtube:
     navTitle: diesmo5 TV
-    navUrl: 
+    navUrl: diesmo5tv
     mediaTitle: The Channel
     mediaDescription: Learn how to code websites, apps, & games. Learn about voice, virtual reality, unity, machine learning, and big data. Watch the podcasts.
     mediaImg: /img/media/youtube/header-1280X960.jpg
