--- a/data/nav/store.yaml
+++ b/data/nav/store.yaml
@@ -5,4 +5,4 @@ Products:
 Services:
     navTitle: Client Services
     navUrl: services
-    imgOFF: https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80
+    imgOFF: /img/store/services/header.jpg
