navbar fixed + home cards updated

--- a/data/home/cards2.yaml
+++ b/data/home/cards2.yaml
@@ -17,8 +17,8 @@ Upcoming Events:
   url:
   tagline: See Event List
 Code Org:
-  title: Join Our Code.org Class
-  description: Join our class so we can keep up with you as you learn, answer questions you might have, and help you progress from one course to the next.
-  img: /img/home/cards/codeorg.jpg
+  title: The SamKast coming soon!
+  description: Listen to industry professionals as they talk about their journey and what it takes to be an engineer, cerative, entrepreneur, etc.
+  img: /img/home/cards/podcast.jpg
   url:
   tagline: Coming Soon...
