--- a/data/nav/new.yaml
+++ b/data/nav/new.yaml
@@ -1,3 +1,6 @@
 GBI:
     navTitle: Global Connect Initiative
     navUrl: "https://globalconnect.diesmo5.com/"
+Sudocore:
+  navTitle: Sudocore
+  navUrl: https://sudocore.diesmo5.com
