--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://diesmo5.com/"
 languageCode = "en-us"
 title = "diesmo5"
-copyright = "Copyright 2016-{year} diesmo5 LLC. All rights reserved."
+copyright = "Copyright 2016-{year} diesmo5, Inc. All rights reserved."
 
 enableRobotsTXT = true
 canonifyURLs = true
